--- a/conf/shibboleth/views/logout.vm
+++ b/conf/shibboleth/views/logout.vm
@@ -14,47 +14,35 @@
 ## environment - Spring Environment object for property resolution
 ##
 <!DOCTYPE html>
-<!--[if lte IE 7]> <html lang="fi" itemtype="http://schema.org/WebPage" data-text-size="3" class="no-js text-size-3 lte_ie9 lte_ie8 lte7"> <![endif]-->
-<!--[if IE 8]> <html lang="fi" itemtype="http://schema.org/WebPage" data-text-size="3" class="no-js text-size-3 lte_ie9 lte_ie8 ie8"> <![endif]-->
-<!--[if IE 9]> <html lang="fi" itemtype="http://schema.org/WebPage" data-text-size="3" class="no-js text-size-3 lte_ie9 ie9"> <![endif]-->
-<!--[if gt IE 9]><!--><html lang="fi" itemtype="http://schema.org/WebPage" data-text-size="3" class="no-js text-size-3"><!--<![endif]-->
+<!--[if lte IE 7]> <html lang="fi" itemtype="http://schema.org/WebPage" class="no-js lte_ie9 lte_ie8 lte7"> <![endif]-->
+<!--[if IE 8]> <html lang="fi" itemtype="http://schema.org/WebPage" class="no-js lte_ie9 lte_ie8 ie8"> <![endif]-->
+<!--[if IE 9]> <html lang="fi" itemtype="http://schema.org/WebPage" class="no-js lte_ie9 ie9"> <![endif]-->
+<!--[if gt IE 9]><!--><html lang="fi" itemtype="http://schema.org/WebPage" class="no-js"><!--<![endif]-->
 <html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Tunnistuspalvelu</title>
+        <title>Suomi.fi tunnistaminen</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="$request.getContextPath()/stylesheets/style.css">
-        <script src="$request.getContextPath()/js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="/resources/stylesheets/style.css">
+        <script src="/resources/js/vendor/modernizr-2.8.3.min.js"></script>
         <!--[if lt IE 9]>
-        <script src="$request.getContextPath()/js/vendor/respond.js"></script>
+        <script src="/resources/js/vendor/respond.js"></script>
         <![endif]-->
     </head>
     <body id="identification-service">
     <a href="#main" class="visuallyhidden focusable">Siirry suoraan sisältöön</a>
     <header id="page-header" role="banner">
-        <div class="header-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xs-12">
-                        <h1><a href="01_tunnistus_alku.html" title="Siirry etusivulle">Tunnistautuminen</a></h1>
-                        <ul class="language-selection horizontal-list text-small">
-                            <li class="selected">Suomeksi</li>
-                            <li><a href="#sv" lang="sv">På svenska</a></li>
-                            <li><a href="#en" lang="en">In English</a></li>
-                        </ul>
-                        <ul class="adjust-font-size horizontal-list" aria-hidden="true">
-                            <li><button title="Pienennä tekstikokoa" class="decrease-font-size">A-</button></li>
-                            <li><button title="Suurenna tekstikokoa" class="increase-font-size">A+</button></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
+        <div id="header-content" class="container">
+            <h1 id="suomi.fi-tunnistaminen" class="site-logo">
+                <img src="/resources/img/logo_fi.svg" title="Suomi.fi-tunnistaminen"/>
+                <span class="visuallyhidden">Suomi.fi-tunnistaminen</span>
+            </h1>
         </div>
     </header>
     <main id="main" role="main" name="main">
-        <div class="main">
+        <div class="main idp-logout-page">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 col-md-8">
@@ -75,23 +63,25 @@
             </div>
         </div>
     </main>
-    <footer id="page-footer" role=”contentinfo”>
-        <div class="container">
-            <div class="row">
-                <div id="footer-logo">
-                    <img src="img/footer-logo2.svg" alt="Väestörekisterikeskus logo">
-                </div>
-                <p>Kansalaisen tunnistuspalvelusta vastaa <a href="#">Väestörekisterikeskus</a></p>
-                <ul class="link-list">
-                    <li><a href="#">Tietoa tunnistautumisesta</a></li>
-                    <li><a href="#">Henkilötietolain mukainen rekisteriseloste</a></li>
-                    <li><a href="#">Ilmoita virheestä tai anna palautetta</a></li>
-                </ul>
-            </div>
-        </div>
+    <footer id="page-footer" role="contentinfo">
+      <div id="footer-content" class="container">
+          <span class="site-logo">
+              <img alt="Suomi.fi-tunnistaminen" src="/resources/img/logo_fi.svg">
+          </span>
+          <div class="footer-links">
+            <ul class="footer-links-info">
+                <li><a target="_blank" id="footer__tietoa_tunnistautumisesta" href="/sivut/info/tietoapalvelusta/">Tietoa Suomi.fi-tunnistamisesta</a><span class="sr-only">Linkki avautuu uuteen ikkunaan</span></li>
+                <li><a target="_blank" id="footer__tietosuojaseloste" href="/sivut/info/tietosuojaseloste/">Tietosuojaseloste</a><span class="sr-only">Linkki avautuu uuteen ikkunaan</span></li>
+            </ul>
+            <ul class="footer-links-feedback">
+                <li><a target="_blank" id="footer__palaute" href="/sivut/info/palaute/">Anna palautetta</a><span class="sr-only">Linkki avautuu uuteen ikkunaan</span></li>
+                <li><a target="_blank" id="footer__virhepalaute" href="/sivut/info/virhepalaute/">Ilmoita virheestä</a><span class="sr-only">Linkki avautuu uuteen ikkunaan</span></li>
+            </ul>
+          </div>
+      </div>
     </footer>
-    <script src="js/vendor/jquery-1.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
+    <script src="/resources/js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="/resources/js/plugins.js"></script>
+    <script src="/resources/js/main.js"></script>
     </body>
 </html>
